@@ -20,6 +20,7 @@
 	AspParser, \
 	AwkParser, \
 	BetaParser, \
+	BlitzBasicParser, \
 	CParser, \
 	CppParser, \
 	CsharpParser, \
@@ -27,6 +28,7 @@
 	EiffelParser, \
 	ErlangParser, \
 	FortranParser, \
+	FreeBasicParser, \
 	HtmlParser, \
 	JavaParser, \
 	JavaScriptParser, \
@@ -36,6 +38,7 @@
 	PascalParser, \
 	PerlParser, \
 	PhpParser, \
+	PureBasicParser, \
 	PythonParser, \
 	RexxParser, \
 	RubyParser, \
